# german-anki-card-generator

./: .gitignore  README.md  build_index.py  deck_builder.py  download_dictionary.py  e2e_test.py  extract_fields.py  generate_cards.py  pyproject.toml  sample.txt
tests/: conftest.py  test_extract_fields.py  test_generate_cards.py
