[project]
name = "anki-card-generator"
version = "0.1.0"
description = "Generate rich Anki cards for German vocabulary from a kaikki.org Wiktionary dump."
requires-python = ">=3.11,<3.12"
dependencies = [
    "genanki>=0.13.1",
]

# ── Ruff config (linter & formatter) ─────────────────────────────
# Run linter:    uv run ruff check .
# Run formatter: uv run ruff format .
[tool.ruff]
line-length = 120                # Max line length before warning (default is 88)
target-version = "py311"         # Assume Python 3.11 syntax

[tool.ruff.lint]
select = [
  "E",   # pycodestyle errors
  "F",   # pyflakes: undefined names, unused imports, etc.
  "I",   # isort: import sorting
  "W",   # pycodestyle warnings
  "B",   # flake8-bugbear: likely bugs and bad practices (e.g. mutable defaults)
  "C4",  # flake8-comprehensions: unnecessary or suboptimal comprehensions
  "SIM", # flake8-simplify: redundant ifs, returns, boolean logic
  "UP",  # pyupgrade: use modern Python syntax (e.g. f-strings, `Path()` literals)
  "PTH", # flake8-use-pathlib: use pathlib instead of os.path
  "N",   # pep8-naming: naming conventions for classes, functions, variables
]
ignore = [
  "E203",   # Whitespace before ':' – conflicts with Black
  "PTH109", # Allow os.getcwd()
  "PTH122", # Avoid replacing os.path.splitext – Path.suffix drops info (e.g. .tar.gz)
  "PTH123", # Allow use of builtin open() – Path.open() adds no real benefit
  "UP006",  # Keep using typing.List/Dict/Set – prefer consistency over builtin generics
  "UP035",  # Same as above – avoid auto-converting to list[]/dict[] syntax
  "B904",   # Don't require `from err` in CLI code – breaks Typer/Click behavior
  "SIM108", # Don't always use ternary operators — they can be kind of hard to read sometimes
  "N806",   # Allow UPPER_CASE_VARIABLE_NAMES in function scopes (for default values etc.)
  "N812",   # Allow importing stuff as uppercase (e.g. function as F)
]
fixable = ["ALL"]

[tool.ruff.lint.isort]
known-third-party = []

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

# ── ty (Astral type checker) ─────────────────────────────────────
[tool.ty.environment]
python-version = "3.11"

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "ruff>=0.15.13",
    "ty>=0.0.37",
]
